package NKikimrMetricsProto;

message TMaximumValueUI64 {
    optional uint64 LastBucketStartTime = 1;
    repeated uint64 Values = 2;
    optional uint64 AllTimeMaximum = 3;
}
